--- a/Core/packages.config
+++ b/Core/packages.config
@@ -1,10 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
+  <package id="EntityFramework.Core" version="7.0.0-rc1-final" targetFramework="net451" />
+  <package id="Ix-Async" version="1.2.5" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.1.0-beta1-20150928-02" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.1.0-beta1-20150928-02" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Configuration" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Logging" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.OptionsModel" version="1.0.0-rc1-final" targetFramework="net451" />
+  <package id="Microsoft.Extensions.Primitives" version="1.0.0-rc1-final" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
+  <package id="Remotion.Linq" version="2.0.1" targetFramework="net451" />
   <package id="System.Collections" version="4.0.0" targetFramework="net451" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net451" />
   <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net451" />
